--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="description" content="Learn how to login Comcast account with step-by-step instructions. Access your services, manage your account, and troubleshoot login issues quickly.">
     <meta name="keywords" content="Comcast login, Comcast login account, Comcast login my account, Comcast email, Comcast email login, Comcast email login my account, how to login comcast, how to login comcast account, how to login comcast email, how to login comcast email account">
     <title>How to Login to Your Comcast Account - Complete Guide</title>
+    <meta name="google-site-verification" content="qoc6djL_Uxv5fFhJxu0Y2uv-7QfRtK0RzN3CEIpprHw" />
+    <meta name="msvalidate.01" content="FB11A406D60AAB9BE1CD526E22725440" />
     <style>
         * {
             margin: 0;
